assets/css/index.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Proza+Libre:wght@700&display=swap");

html {
  scroll-behavior: smooth;
  font-size: 100%;

}

html,
body {
  height: 100%;
  color: var(--font-color);
}

:root {
  --spacing-1: 8px;
  --spacing-2: 12px;
  --spacing-3: 16px;
  --spacing-4: 24px;
  --border-radius: 12px;
  --font-color: #323232;
  --accent-main: #F2DDD5;
  --accent-secondary: #535473;
  --font-family-primary: 'Jost', serif;
  --font-family-secondary: 'Fira Sans Condensed', sans-serif;
  --font-family-tertiary: 'PT Sans', sans-serif;
}

.logo {
  margin: 0;
  font-family: var(--font-family-primary);
  font-size: 3rem;
  font-weight: normal;
  font-style: normal;
  color: var(--accent-secondary);
}

#hero-container {
  position: relative;
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  padding: 0;
}

.hero-image {
  width: 100%;
  height: auto;
  max-height: 750px;
  padding: 0;
  grid-column: 1 / span 2;
  overflow: hidden;
}

.hero-image::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
}

.hero-text {
  position: absolute;
  top: 20%;
  left: 5%; 
  color: white;
  padding: 0;
  grid-column: 1 / span 1;
  max-width: 90%; 
}

.hero-text p {
  padding: 0;
  font-size: calc(14px + 1vw);
}

body {
  font-family: var(--font-family-tertiary);
  font-weight: normal;
  font-style: normal;
  margin: 0;
  display: flex;
  flex-direction: column;
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--font-family-primary);
  font-weight: 400;
  font-style: normal;
  padding: 0 var(--spacing-3);
  text-align: center;
}

h1 {
  font-family: var(--font-family-primary);
  font-size: 3rem;
  letter-spacing: .27px;
  text-transform: uppercase;
}

h2 {
  font-size: 2.5rem;
}

h4 {
  font-size: 1.5rem;

}

h3, h5, h6 {
  font-size: 2rem;
  margin: 0;
  margin-bottom: var(--spacing-2);
}

p, h3, h4, h5, h6 {
  padding: 0 var(--spacing-3);
}

p {
  font-family: var(--font-family-tertiary);
  font-weight: normal;
  font-style: normal;
  text-align: center;

}

nav {
  display: flex;
  align-items: center;
  padding: var(--spacing-3) 0;
  color: #202020;
}

.navigation-items {
  display: flex;
  list-style-type: none;
  padding: 0;
  margin: 0;
  align-items: center;
  margin-left: auto;
  margin-right: 10px;
  justify-content: space-between;
}

.navigation-item {
  margin: var(--spacing-1);
}

.button {
  border: 2px solid;
  border-color: #202020;
  justify-content: center;
  margin: var(--spacing-3) auto;
  display: flex;
  padding: 10px 0;
  width: 100px;
}

.chevron-right {
  display: none;
  height: 1rem;
  width: auto;
}

.burger-menu {
  display: none;
  cursor: pointer;
  margin: auto;
  align-items: center;
  color: #FFFFFF;
}

.burger-line {
  width: 30px;
  height: 3px;
  background-color: var(--font-color);
  margin: 5px;
  transition: all 0.3s ease;
}

.nav-open .burger-line:nth-child(1) {
  transform: rotate(-45deg) translate(-5px, 6px);
}

.nav-open .burger-line:nth-child(2) {
  opacity: 0;
}

.nav-open .burger-line:nth-child(3) {
  transform: rotate(45deg) translate(-5px, -6px);
}

#about-container {
  padding: 48px 0;
  width: 90%;
  margin: 0 auto; 
  display: grid;
  gap: 20px;
  grid-template-columns: repeat(2, 1fr); 
}

.about {
  padding: 20px;
  display: flex;
  flex-direction: column;
}

.about h3, .about p {
  margin-top: 10px;
  margin-bottom: 0;
}

.about img {
  border-radius: var(--border-radius);
  max-width: 80%;
  max-height: 80%;
  overflow: hidden;
  display: block;
  margin: auto;
}


.instagram-widget {
  margin: 50px;
}

#newsletter-container {
  padding: 48px 0;
  width: 90%;
  margin: 0 auto; 
  display: grid;
  gap: 20px;
  grid-template-columns: repeat(2, 1fr); 
}

.newsletter {
  display: flex;
  flex-direction: column;
}

.newsletter h4, .newsletter p {
  margin-top: 10px;
  margin-bottom: 0;
}

#newsletter-email-input {
  margin-top: 10px;
  margin-left: var(--spacing-3);
}

footer {
  background-color: var(--accent-secondary);
}

.footer-container {
  position: relative;
  width: 100%;
  display: grid;
  gap: 20px;
  grid-template-columns: repeat(4, 1fr); 
}

.footer-section {
  padding: 50px;
}

.footer-section ul {
  list-style-type: none;
  margin: 0;
  padding-left: var(--spacing-3);
}

.footer-section li {
  padding-top: 10px;
}

.social-icons li {
  display: inline-block;
  margin-right: 10px;
}

.footer-section img {
  width: 30px;
  background-color: var(--accent-main);
  border-radius: 50%;
}

.copywrite {
  justify-content: center;
  text-align: center;
}

.designed-by {
  color: var(--accent-main);
}

.icon {
  font-size: 2em;
  color: var(--font-color);
  margin: 0 var(--spacing-1);
}

a {
  color: var(--font-color);
  text-decoration: none;
  font-weight: 400;
}

#services-container {
  padding: 48px 0;
  max-width: 90%;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
  gap: 20px;
}

.service {
  padding: 20px;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.service h3,
.service p,
.service img {
  margin-top: 10px;
  width: auto; 
}

.service img {
  max-width: 50px;
  height: auto;
  margin: 0 auto; 
  padding: 10px;
  background-color: var(--accent-main);
  border-radius: 50%;
}

#destinations-container {
  padding: 48px 0;
  width: 90%;
  margin: 0 auto; 
  display: grid;
  gap: 20px;
  grid-template-columns: repeat(2, 1fr); 
}

.destination {
  padding: 20px;
  display: flex;
  flex-direction: column;
}

.destination h3, .destination p {
  margin-top: 10px;
  margin-bottom: 0;
}

.destination img {
  margin-top: 0;
  margin-left: 10px;
  width: 100%;
  border-radius: var(--border-radius);
}


#FAQ-container {
  padding: 48px 0;
  width: 90%;
  margin: 0 auto;
  display: grid;
  gap: 20px;
  grid-template-columns: repeat(2, 1fr); 
}

.FAQ img {
  margin-top: 0;
  margin-right: 10px;
  width: 100%;
  border-radius: var(--border-radius);
}

.accordion-container {
  margin-top: auto;
  margin-bottom: auto;
}

.accordion {
  background-color: #eee;
  color: #444;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  text-align: left;
  border: none;
  outline: none;
  transition: 0.4s;
  margin-left: 10px;
}

button {
  font-family: var(--font-family-secondary);
  font-weight: 400;
  font-size: 1rem;
}

.active, .accordion:hover {
  background-color: var(--accent-main);
}

.panel {
  padding: 0 18px;
  background-color: white;
  overflow: hidden;
  max-height: 0;
  transition: max-height 0.5s ease-out;
}

.panel.show {
  max-height: 500px;
}

.accordion:after {
  content: '\02795';
  font-size: 1rem;
  color: #777;
  float: right;
  margin-left: 5px;
}

.active:after {
  content: "\2796";
}

/* Responsive design for mobile */
@media (max-width: 768px) {
  .logo {
    color: #FFFFFF;
  }

  #hero-container {
    grid-template-columns: 1fr; 
  }
  
  .hero-text {
    left: 10%; 
    top: 15%; 
    max-width: 80%; 
  }
  html {
    font-size: 90%; 
  }

  nav {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1000; 
    background-color: #202020;
  }

  .burger-menu {
    display: block;
  }

  .navigation-items {
    flex-direction: column;
    position: absolute;
    top: 90px; 
    left: 0;
    background-color: #202020;
    width: 100%;
    height: 100vh;
    padding: 0;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
    z-index: 1000;
    align-items: center;
    justify-content: flex-start;
    transform: translateX(100%);
    transition: transform 0.3s ease-out; 
  }

  .navigation-item {
    padding: 20px 0;
    margin: 0;
    font-size: 1rem;
  }

  .navigation-items a {
    border-top: 1px solid #cecece;
    width: 90%;
  }

  .navigation-items.nav-open {
    transform: translateX(0);
  }

  .nav-open .chevron-right {
    display: inline-block;
    vertical-align: middle;
    position: absolute;
    right: 5%;
  }
  

  .contact-us {
    border-radius: 0;
    background: none;
    color: var(--accent-primary);
    width: 90%;
    padding: 20px 0;
    margin: 0;
  }


  #about-container {
    grid-template-columns: 1fr; 
  }
  
  .about img {
    max-width: 100%; 
    max-height: 100%;
  }

  .about .button {
    width: auto; 
  }

  .footer-container {
    grid-template-columns: 1fr;
  }

  .footer-section {
    padding: 20px; 
  }
  #destinations-container {
    grid-template-columns: 1fr;
  }

  .destination img {
    margin-left: 0; 
  }
  #FAQ-container {
    grid-template-columns: 1fr;
  }

  .accordion {
    margin-left: 0; 
  }
}


/* Responsive design for tablet */
@media (min-width: 768px) and (max-width: 1024px) {
  .footer-container {
    grid-template-columns: repeat(2, 1fr);
  }
}

